2012-01-08  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/other/progtype-1.c: New file.
	* tests/simulate/other/progtype-2.c: New file.
	* tests/simulate/other/progtype-3.c: New file.

2012-01-06  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/common.h: Fix typo of last commit.

2012-01-05  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/regression/bug-21872-1.c: Exclude GCC 4.6 warning.
	* tests/simulate/regression/bug-21872-2.c: Same.
	* tests/simulate/regression/bug-21955.c: Same.

2012-01-05  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/scanf/sscanf-1.c: Add 'const' for PROGMEM variables.
	* tests/simulate/scanf/sscanf-2.c: Same.
	* tests/simulate/scanf/sscanf_brk-1.c: Same.
	* tests/simulate/scanf/sscanf_brk-2.c: Same.
	* tests/simulate/scanf/sscanf_brk-3.c: Same.
	* tests/simulate/scanf/sscanf_brk-4.c: Same.
	* tests/simulate/scanf/sscanf-c1.c: Same.
	* tests/simulate/scanf/sscanf-c2.c: Same.
	* tests/simulate/scanf/sscanf-d1.c: Same.
	* tests/simulate/scanf/sscanf-d2.c: Same.
	* tests/simulate/scanf/sscanf-eof.c: Same.
	* tests/simulate/scanf/sscanf_flt-f1.c: Same.
	* tests/simulate/scanf/sscanf_flt-f2.c: Same.
	* tests/simulate/scanf/sscanf_flt-f3.c: Same.
	* tests/simulate/scanf/sscanf_flt-fnn.c: Same.
	* tests/simulate/scanf/sscanf_flt-fw.c: Same.
	* tests/simulate/scanf/sscanf-h.c: Same.
	* tests/simulate/scanf/sscanf-hh.c: Same.
	* tests/simulate/scanf/sscanf-i.c: Same.
	* tests/simulate/scanf/sscanf-l.c: Same.
	* tests/simulate/scanf/sscanf-o1.c: Same.
	* tests/simulate/scanf/sscanf-o2.c: Same.
	* tests/simulate/scanf/sscanf-s1.c: Same.
	* tests/simulate/scanf/sscanf-s2.c: Same.
	* tests/simulate/scanf/sscanf-x1.c: Same.
	* tests/simulate/scanf/sscanf-x2.c: Same.
	* tests/simulate/scanf/sscanf-x3.c: Same.

	* tests/simulate/stdlib/strtol-3.c: Same.
	* tests/simulate/stdlib/strtoul-2.c: Same.
	* tests/simulate/stdlib/strtoul-3.c: Same.

2012-01-05  Dmitry Xmelkov  <dmix@gmail.ru>
